--- a/.gitignore
+++ b/.gitignore
@@ -28,10 +28,10 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-# /public/packs
-# /public/packs-test
-# /node_modules
+/public/packs
+/public/packs-test
+/node_modules
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
-# node_modules
+node_modules
